--- a/product/roundhouse.databases.access/roundhouse.databases.access.csproj
+++ b/product/roundhouse.databases.access/roundhouse.databases.access.csproj
@@ -43,10 +43,9 @@
     <ProjectReference Include="..\roundhouse\roundhouse.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FluentNHibernate" Version="1.3.0.733" />
-    <PackageReference Include="NHibernate.JetDriver" Version="2.0.0.1001"/>
-  </ItemGroup>
- <ItemGroup>
-    <None Include="app.config" />
+    <PackageReference Include="FluentNHibernate" Version="2.1.2" />
+    <PackageReference Include="Iesi.Collections" Version="4.0.4" />
+    <PackageReference Include="NHibernate" Version="5.1.1" />
+    <PackageReference Include="NHibernate.JetDriver" Version="2.0.0.1002" />
   </ItemGroup>
 </Project>
