--- a/product/roundhouse.tests.integration/app.config
+++ b/product/roundhouse.tests.integration/app.config
@@ -8,4 +8,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+  <!--
+  <oracle.manageddataaccess.client>
+    <version number="*">
+      <dataSources>
+        <dataSource alias="TestRoundhousE" descriptor="Data Source=MyOracleDB;Integrated Security=yes;" />
+      </dataSources>
+   </version>
+  </oracle.manageddataaccess.client>
+  -->
+  </configuration>
