--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,21 @@
-version: 1.0.{build}
 image: Visual Studio 2017
+
+install:
+  - choco install gitversion.portable -pre -y
+
+before_build:
+  - ps: gitversion /l console /output buildserver
+
 build_script:
-- ps: .\build.ps1
+  - ps: .\build.ps1
+
 test:
   assemblies:
     only:
-    - '**\*tests.dll'
+      - '**\*tests.dll'
+
 artifacts:
-- path: .\code_drop\packages\*.nupkg
-  name: Nuget packages
-- path: .\code_drop\log\*
-  name: Logs
+  - path: .\code_drop\packages\*.nupkg
+    name: Nuget packages
+  - path: .\code_drop\log\*
+    name: Logs
