--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,14 +8,23 @@ before_build:
 
 build_script:
   - ps: .\build.ps1
-
+  
 test:
   assemblies:
     only:
       - '**\*tests.dll'
-
+      
 artifacts:
   - path: .\code_drop\packages\*.nupkg
     name: Nuget packages
   - path: .\code_drop\log\*
     name: Logs
+
+deploy:
+  provider: NuGet
+  server:  https://www.myget.org/F/roundhouse/api/v2/package
+  api_key:
+    secure: XWER/H0IkJ8JWFm+n3/lr7hHoNFAX/VpRD+AfpZo2EUgQkQKhrMxHa4aYZPogsvY
+  skip_symbols: true 
+  artifact: /.*\.nupkg/
+  disable_publish_on_pr: true
