--- a/product/roundhouse.databases.access/roundhouse.databases.access.csproj
+++ b/product/roundhouse.databases.access/roundhouse.databases.access.csproj
@@ -43,10 +43,8 @@
     <ProjectReference Include="..\roundhouse\roundhouse.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FluentNHibernate" version="1.3.0.733" />
-    <PackageReference Include="Iesi.Collections" version="3.3.2.4000" />
-    <PackageReference Include="NHibernate" version="3.3.2.4000" />
-    <PackageReference Include="NHibernate.JetDriver" version="2.0.0.1001"/>
+    <PackageReference Include="FluentNHibernate" Version="1.3.0.733" />
+    <PackageReference Include="NHibernate.JetDriver" Version="2.0.0.1001"/>
   </ItemGroup>
  <ItemGroup>
     <None Include="app.config" />
