--- a/product/roundhouse.databases.mysql/roundhouse.databases.mysql.csproj
+++ b/product/roundhouse.databases.mysql/roundhouse.databases.mysql.csproj
@@ -41,10 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FluentNHibernate" version="1.3.0.733" />
-    <PackageReference Include="Iesi.Collections" version="3.3.2.4000" />
-    <PackageReference Include="NHibernate" version="3.3.2.4000" />
-    <PackageReference Include="Mysql.Data" version="6.9.9" />
+    <PackageReference Include="FluentNHibernate" Version="1.3.0.733" />
+    <PackageReference Include="Mysql.Data" Version="6.10.5" />
   </ItemGroup>
  <ItemGroup>
     <ProjectReference Include="..\roundhouse\roundhouse.csproj" />
