--- a/product/roundhouse.console/roundhouse.console.csproj
+++ b/product/roundhouse.console/roundhouse.console.csproj
@@ -56,6 +56,7 @@
     <PackageReference Include="NHibernate.JetDriver" Version="2.0.0.1002" />
     <PackageReference Include="log4net" Version="2.0.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Polly" Version="5.9.0" />
     <PackageReference Include="StructureMap" Version="4.6.1" />
     <PackageReference Include="System.Data.SqlClient">
       <Version>4.4.3</Version>
