--- a/product/roundhouse.lib.merged/roundhouse.lib.nuspec
+++ b/product/roundhouse.lib.merged/roundhouse.lib.nuspec
@@ -25,5 +25,6 @@
   </metadata>
   <files>
     <file src="$mergedDll$" target="lib\net461" />
+    <file src="$netstandardFiles$" target="lib\netstandard2.0" />
   </files>
 </package>
