Trying to get AppVeyor to put the version number in the .tar.gz file name
https://cdn-images-1.medium.com/max/1200/1*snTXFElFuQLSFDnvZKJ6IA.png

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ test:
 
 after_build:
   - 7z a .\code_drop\packages\RoundhousE.tar .\code_drop\tmp\RoundhousE
-  - 7z a .\code_drop\packages\RoundhousE.$(GitVersion_FullSemVer).tar.gz .\code_drop\packages\RoundhousE.tar
+  - 7z a .\code_drop\packages\RoundhousE.%GitVersion_SemVer%.tar.gz .\code_drop\packages\RoundhousE.tar
   
       
 artifacts:
